--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,7 +6,9 @@
 
 .header {
     width: 100%;
+    min-height: 100px;
     position: fixed;
     top: 0;
     background-color: #fff;
+    z-index: 1;
 }
