--- a/blocks/promo/__button/promo__button.css
+++ b/blocks/promo/__button/promo__button.css
@@ -7,6 +7,7 @@
     text-decoration: none;
     color: #fff;
     margin: 80px 0;
+    transition: background-color ease-in-out 0.3s;
 }
 
 @media (max-width: 768px) {
@@ -19,4 +20,8 @@
         font-size: 14px;
         margin: 20px 0;
     }
+}
+
+.promo__button:hover {
+    background-color: rgba(0, 0, 0, 0.6);
 }
