--- a/blocks/promo/__content/promo__content.css
+++ b/blocks/promo/__content/promo__content.css
@@ -1,22 +1,10 @@
 .promo__content {
-    margin: 0;
-    padding: 0;
-    font-size: 24px;
-    font-weight: normal;
-    line-height: 36px;
-    max-width: 768px;
-}
-
-@media (max-width: 500px) {
-    .promo__content {
-        font-size: 18px;
-        line-height: 24px;
-    }
-}
-
-@media (max-width: 380px) {
-    .promo__content {
-        font-size: 14px;
-        line-height: 24px;
-    }
+    max-width: 1280px;
+    min-height: 100vh;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: flex-end;
+    margin-top: 80px;
 }
