--- a/blocks/footer/__content/footer__content.css
+++ b/blocks/footer/__content/footer__content.css
@@ -2,5 +2,6 @@
     max-width: 1280px;
     margin: auto;
     display: flex;
-    padding-bottom: 20px;
+    justify-content: space-between;
+    align-items: center;
 }
