--- a/blocks/footer/__copy/footer__copy.css
+++ b/blocks/footer/__copy/footer__copy.css
@@ -3,5 +3,12 @@
     text-align: center;
     font-size: 12px;
     line-height: 16px;
+    padding-left: 20px;
 
+}
+
+@media(max-width: 359px) {
+    .footer__copy {
+        font-size: 10px;
+    }
 }
