--- a/blocks/info/__block-part/info__block-part.css
+++ b/blocks/info/__block-part/info__block-part.css
@@ -1,5 +1,9 @@
 .info__block-part {
     padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
 }
 
 @media(max-width: 619px) {
