--- a/blocks/wrapper/wrapper.css
+++ b/blocks/wrapper/wrapper.css
@@ -5,4 +5,10 @@
     max-width: 1920px;
     height: 100%;
     font-family: 'Roboto', sans-serif;
+    /*background-image: url(../../images/bg.svg);
+    background-position: center;
+    background-size: 150%;
+    background-repeat: no-repeat;
+    background-clip: content-box;
+    background-attachment: fixed;*/
 }
