--- a/blocks/contacts/contacts.css
+++ b/blocks/contacts/contacts.css
@@ -1,3 +1,9 @@
+@import url(__title/contacts__title.css);
+@import url(__content/contacts__content.css);
+@import url(__image/contacts__image.css);
+@import url(__block/contacts__block.css);
+@import url(__block-title/contacts__block-title.css);
+
 .contacts {
     max-width: 1280px;
     margin: 0 auto;
