--- a/blocks/info/__block/info__block.css
+++ b/blocks/info/__block/info__block.css
@@ -1,6 +1,8 @@
 .info__block {
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    padding-top: 80px;
 }
