--- a/blocks/promo/__button/promo__button.css
+++ b/blocks/promo/__button/promo__button.css
@@ -6,7 +6,7 @@
     font-weight: 500;
     text-decoration: none;
     color: #fff;
-    margin: 80px 0;
+    /*margin: 80px 0;*/
     transition: background-color ease-in-out 0.3s;
 }
 
@@ -18,7 +18,7 @@
 @media (max-width: 380px) {
     .promo__button {
         font-size: 14px;
-        margin: 20px 0;
+        /*margin: 20px 0;*/
     }
 }
 
