--- a/blocks/info/__block/info__block.css
+++ b/blocks/info/__block/info__block.css
@@ -1,5 +1,6 @@
 .info__block {
-    min-height: 100vh;
+    /*min-height: 100vh;*/
+    min-height: calc(100vh - 80px);
     display: flex;
     justify-content: center;
     align-items: center;
