--- a/blocks/info/info.css
+++ b/blocks/info/info.css
@@ -14,6 +14,7 @@
 @import url(__block-paragraph/_alert/info__block-paragraph_alert.css);
 @import url(__button/info__button.css);
 @import url(__block-paragraph/_info/info__block-paragraph_info.css);
+@import url(__block-link/_space/info__block-link_space.css);
 
 .info {
     max-width: 1280px;
