--- a/pages/index.css
+++ b/pages/index.css
@@ -7,6 +7,7 @@
 @import url(../vendor/modal/modal.css);
 @import url(../vendor/revelator/fm.revealator.jquery.css);
 @import url(../vendor/fontawesome5/all.css);
+@import url(../vendor/totop/totop.css);
 
 @import url(../blocks/wrapper/wrapper.css);
 @import url(../blocks/header/header.css);
