--- a/blocks/promo/__button/promo__button.css
+++ b/blocks/promo/__button/promo__button.css
@@ -1,13 +1,16 @@
 .promo__button {
-    background-color: #000;
+    background-color: rgba(255, 255, 255, 0.7);
     border-radius: 25px;
     padding: 15px;
     font-size: 30px;
     font-weight: 500;
     text-decoration: none;
-    color: #fff;
+    color: #000;
     /*margin: 80px 0;*/
-    transition: background-color ease-in-out 0.3s;
+    transition: background-color ease-in-out 0.3s,
+                color ease 0.3s;
+    position: relative;
+    z-index: 9;
 }
 
 @media (max-width: 768px) {
@@ -24,4 +27,5 @@
 
 .promo__button:hover {
     background-color: rgba(0, 0, 0, 0.6);
+    color: #fff;
 }
