--- a/blocks/promo/__paragraph/promo__paragraph.css
+++ b/blocks/promo/__paragraph/promo__paragraph.css
@@ -5,6 +5,9 @@
         font-weight: normal;
         line-height: 36px;
         max-width: 768px;
+        position: relative;
+        z-index: 9;
+        color: #fff;
     }
     
     @media (max-width: 500px) {
