--- a/blocks/promo/__overlay/promo__overlay.css
+++ b/blocks/promo/__overlay/promo__overlay.css
@@ -3,7 +3,7 @@
         min-height: 100%;
         background-color: rgba(0, 0, 0, 0.5);
         position: absolute;
-        top: 80px;
+        top: 0;
         left: 0;
         z-index: 1;
 }
