--- a/blocks/promo/promo.css
+++ b/blocks/promo/promo.css
@@ -12,11 +12,13 @@
     background-image: url(../../images/bg-big.jpg);
     background-size: cover;
     background-position: center;
+    padding-top: 1px;
 }
 
 @media (max-width: 1320px) {
 .promo {
-    padding: 0 20px;
+    padding-left: 20px;
+    padding-right: 20px;
     }
 }
 
