--- a/blocks/promo/__button/promo__button.css
+++ b/blocks/promo/__button/promo__button.css
@@ -18,6 +18,13 @@
         font-size: 24px;
     }
 }
+
+@media (max-width: 635) {
+    .promo__button {
+        margin-top: 20px;
+    }
+}
+
 @media (max-width: 380px) {
     .promo__button {
         font-size: 14px;
