--- a/blocks/promo/__content/promo__content.css
+++ b/blocks/promo/__content/promo__content.css
@@ -1,10 +1,10 @@
 .promo__content {
     max-width: 1280px;
-    min-height: calc(100vh - 80px);
+    height: 100%;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: flex-end;
     margin-top: 80px;
 }
