--- a/blocks/promo/__paragraph/promo__paragraph.css
+++ b/blocks/promo/__paragraph/promo__paragraph.css
@@ -8,6 +8,7 @@
         position: relative;
         z-index: 9;
         color: #fff;
+        margin-bottom: 20px;
     }
     
     @media (max-width: 500px) {
