--- a/blocks/promo/__overlay/promo__overlay.css
+++ b/blocks/promo/__overlay/promo__overlay.css
@@ -1,6 +1,6 @@
 .promo__overlay {
         width: 100%;
-        height: calc(100vh + 80px);
+        height: 100%;
         background-color: rgba(0, 0, 0, 0.5);
         position: absolute;
         top: 0;
