--- a/blocks/promo/__button/promo__button.css
+++ b/blocks/promo/__button/promo__button.css
@@ -11,17 +11,12 @@
                 color ease 0.3s;
     position: relative;
     z-index: 9;
+    margin: 20px 0;
 }
 
 @media (max-width: 768px) {
     .promo__button {
         font-size: 24px;
-    }
-}
-
-@media (max-width: 635) {
-    .promo__button {
-        margin-top: 20px;
     }
 }
 
