--- a/blocks/promo/__content/promo__content.css
+++ b/blocks/promo/__content/promo__content.css
@@ -6,5 +6,6 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-end;
-    margin-top: 80px;
+    padding-top: 80px;
+    box-sizing: border-box;
 }
