--- a/blocks/promo/promo.css
+++ b/blocks/promo/promo.css
@@ -12,7 +12,7 @@
     background-image: url(../../images/bg-big.jpg);
     background-size: cover;
     background-position: center;
-    padding-top: 1px;
+    /*padding-top: 1px;*/
 }
 
 @media (max-width: 1320px) {
