--- a/blocks/info/__button/info__button.css
+++ b/blocks/info/__button/info__button.css
@@ -7,6 +7,7 @@
     text-decoration: none;
     color: #fff;
     /*margin: 80px 0;*/
+    margin-top: 20px;
     transition: background-color ease-in-out 0.3s;
 }
 
