--- a/blocks/partners/partners.css
+++ b/blocks/partners/partners.css
@@ -7,6 +7,5 @@
 .partners {
     max-width: 1280px;
     margin: 0 auto;
-    padding-top: 75px;
-    padding-bottom: 75px;
+    padding: 75px 20px;
 }
