--- a/pages/index.css
+++ b/pages/index.css
@@ -18,5 +18,6 @@
 @import url(../blocks/gallery/gallery.css);
 @import url(../blocks/media/media.css);
 @import url(../blocks/partners/partners.css);
+@import url(../blocks/persons/persons.css);
 @import url(../blocks/contacts/contacts.css);
 @import url(../blocks/footer/footer.css);
