--- a/blocks/promo/__content/promo__content.css
+++ b/blocks/promo/__content/promo__content.css
@@ -1,6 +1,6 @@
 .promo__content {
     max-width: 1280px;
-    height: 100vh;
+    min-height: 100vh;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
