--- a/blocks/info/info.css
+++ b/blocks/info/info.css
@@ -1,4 +1,5 @@
 @import url(__block/info__block.css);
+@import url(__block-video/info__block-video.css);
 @import url(__block/_order-back/info__block_order-back.css);
 @import url(__block-image/info__block-image.css);
 @import url(__block-content/info__block-content.css);
@@ -14,6 +15,7 @@
 @import url(__block-paragraph/_alert/info__block-paragraph_alert.css);
 @import url(__button/info__button.css);
 @import url(__block-paragraph/_info/info__block-paragraph_info.css);
+@import url(__block-link/_space/info__block-link_space.css);
 @import url(__block-link/_space/info__block-link_space.css);
 
 .info {
